--- a/index.html
+++ b/index.html
@@ -14,15 +14,56 @@
             integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
         <header>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Оплата</a></li>
-            <li><a href="">Отзывы</a></li>
-            <li><a href="">Вопрос-ответ</a></li>
-            <li><a href="">Контакты</a></li>
+            <div class="wrapper">
+                <nav>
+                    <ul class="nav">
+                        <li><a href="">Доставка</a></li>
+                        <li><a href="">Оплата</a></li>
+                        <li><a href="">Отзывы</a></li>
+                        <li><a href="">Вопрос-ответ</a></li>
+                        <li><a href="">Контакты</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="bg-white">
+                <div class="header">
+                    <div class="wrapper">
+                        <div class="header-top">
+                            <div class="logo">BEAUTY</div>
+                            <div>
+                                <div class="header-info">
+                                    <span>8 (929) 972-70-29</span>
+                                    <button type="button">Обратный звонок</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
+                    <hr>
+                    <div class="wrapper">
+                        <div class="header-bottom">
+
+                            <ul class="nav">
+                                <li><a href="">Парикмахерская</a></li>
+                                <li><a href="">Барбершоп</a></li>
+                                <li><a href="">Маникюр</a></li>
+                                <li><a href="">Педикюр</a></li>
+                                <li><a href="">Массаж</a></li>
+                                <li><a href="">Мебель</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+              
+            </div>
         </header>
+        <section class="banner">
+            <div class="wrapper">
+                
+            </div>
+        </section>
     </body>
 </html>
