create first section + css + logo

--- a/index.html
+++ b/index.html
@@ -33,19 +33,23 @@
                 <div class="header">
                     <div class="wrapper">
                         <div class="header-top">
-                            <div class="logo">BEAUTY</div>
+                            <div class="logo">
+                                <span class="logo-image"></span>
+                                <span>BEAUTY</span>
+                            </div>
                             <div>
                                 <div class="header-info">
                                     <span>8 (929) 972-70-29</span>
-                                    <button type="button">Обратный звонок</button>
+                                    <button type="button">
+                                        Обратный звонок
+                                    </button>
                                 </div>
                             </div>
                         </div>
-                    </div> 
-                    <hr>
+                    </div>
+                    <hr />
                     <div class="wrapper">
                         <div class="header-bottom">
-
                             <ul class="nav">
                                 <li><a href="">Парикмахерская</a></li>
                                 <li><a href="">Барбершоп</a></li>
@@ -57,12 +61,16 @@
                         </div>
                     </div>
                 </div>
-              
             </div>
         </header>
         <section class="banner">
             <div class="wrapper">
-                
+                <h1 class="title">Супер кресло</h1>
+                <p>
+                    Текст акции всегда отражает суть, а не просто болтовню,
+                    поэтому внимательнее
+                </p>
+                <a class="btn" href="#">Подробнее</a>
             </div>
         </section>
     </body>
