--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <a class="btn" href="#">Подробнее</a>
             </div>
         </section>
-        <section>
+        <section class="catalog">
             <div class="wrapper">
                 <div class="grid">
                     <div class="grid-item grid-item-title">
@@ -82,7 +82,7 @@
                     <div class="grid-item grid-item">
                         <img src="/img/car.svg" alt="delivery" />
                     </div>
-                    <div class="grid-item grid-item-01">
+                    <div class="grid-item grid-item-catalog">
                         <div class="bg-white">
                             <div class="thumb">
                                 <img src="/img/chair.png" alt="chair" />
@@ -94,7 +94,7 @@
                             <a href="#" class="grid-btn">Купить</a>
                         </div>
                     </div>
-                    <div class="grid-item grid-item-02">
+                    <div class="grid-item grid-item-catalog">
                         <div class="bg-white">
                             <div class="thumb">
                                 <img src="/img/chair.png" alt="chair" />
@@ -106,7 +106,7 @@
                             <a href="#" class="grid-btn">Купить</a>
                         </div>
                     </div>
-                    <div class="grid-item grid-item-03">
+                    <div class="grid-item grid-item-catalog">
                         <div class="bg-white">
                             <div class="thumb">
                                 <img src="/img/chair.png" alt="chair" />
@@ -118,7 +118,7 @@
                             <a href="#" class="grid-btn">Купить</a>
                         </div>
                     </div>
-                    <div class="grid-item grid-item-04">
+                    <div class="grid-item grid-item-catalog">
                         <div class="bg-white">
                             <div class="thumb">
                                 <img src="/img/chair.png" alt="chair" />
@@ -132,19 +132,23 @@
                     </div>
                     <div class="grid-item grid-item-left">
                         <div class="bg-green">
-                            <div class="bg-green-item">
-                                <h3>Получайте бонусы и подарки</h3>
-                                <p>
-                                    Каждый месяц разыгрываем<br />10 000 рублей
-                                    для наших клиентов
-                                </p>
-                                <input
-                                    type="email"
-                                    placeholder="Введите e-mail"
+                            <div class="bg-green">
+                                <div class="bg-green-item">
+                                    <h3>Получайте бонусы и подарки</h3>
+                                    <p>
+                                        Каждый месяц разыгрываем<br />10 000
+                                        рублей для наших клиентов
+                                    </p>
+                                    <input
+                                        type="email"
+                                        placeholder="Введите e-mail"
+                                    />
+                                </div>
+                                <img
+                                    class="bg-green-img"
+                                    src="img/envelope.svg"
+                                    alt="Envelope"
                                 />
-                            </div>
-                            <div class="bg-green-item">
-                                <img src="/img/envelope.svg" alt="envelope" />
                             </div>
                         </div>
                     </div>
