--- a/index.html
+++ b/index.html
@@ -34,16 +34,12 @@
                     <div class="wrapper">
                         <div class="header-top">
                             <div class="logo">
-                                <span class="logo-image"></span>
-                                <span>BEAUTY</span>
+                                <span class="logo-image"></span
+                                ><span>BEAUTY</span>
                             </div>
-                            <div>
-                                <div class="header-info">
-                                    <span>8 (929) 972-70-29</span>
-                                    <button type="button">
-                                        Обратный звонок
-                                    </button>
-                                </div>
+                            <div class="header-info">
+                                <span>8 (812) 123-45-67</span>
+                                <button type="button">Обратный звонок</button>
                             </div>
                         </div>
                     </div>
@@ -79,77 +75,75 @@
                     <div class="grid-item grid-item-title">
                         <h2 class="title-h2">Специальные предложения</h2>
                     </div>
-                    <div class="grid-item grid-item">
-                        <img src="/img/car.svg" alt="delivery" />
+                    <div class="grid-item grid-item-img">
+                        <img src="img/car.svg" alt="Delivery" />
                     </div>
                     <div class="grid-item grid-item-catalog">
                         <div class="bg-white">
                             <div class="thumb">
-                                <img src="/img/chair.png" alt="chair" />
+                                <img src="img/chair.png" alt="Chair" />
                             </div>
                             <p class="grid-title">
                                 Парикмахерское кресло «Норм» гидравлическое
                             </p>
                             <p class="grid-price">9 900 ₽</p>
-                            <a href="#" class="grid-btn">Купить</a>
+                            <a class="grid-btn" href="#">Купить</a>
                         </div>
                     </div>
                     <div class="grid-item grid-item-catalog">
                         <div class="bg-white">
                             <div class="thumb">
-                                <img src="/img/chair.png" alt="chair" />
+                                <img src="img/chair.png" alt="Chair" />
                             </div>
                             <p class="grid-title">
                                 Парикмахерское кресло «Норм» гидравлическое
                             </p>
                             <p class="grid-price">9 900 ₽</p>
-                            <a href="#" class="grid-btn">Купить</a>
+                            <a class="grid-btn" href="#">Купить</a>
                         </div>
                     </div>
                     <div class="grid-item grid-item-catalog">
                         <div class="bg-white">
                             <div class="thumb">
-                                <img src="/img/chair.png" alt="chair" />
+                                <img src="img/chair.png" alt="Chair" />
                             </div>
                             <p class="grid-title">
                                 Парикмахерское кресло «Норм» гидравлическое
                             </p>
                             <p class="grid-price">9 900 ₽</p>
-                            <a href="#" class="grid-btn">Купить</a>
+                            <a class="grid-btn" href="#">Купить</a>
                         </div>
                     </div>
                     <div class="grid-item grid-item-catalog">
                         <div class="bg-white">
                             <div class="thumb">
-                                <img src="/img/chair.png" alt="chair" />
+                                <img src="img/chair.png" alt="Chair" />
                             </div>
                             <p class="grid-title">
                                 Парикмахерское кресло «Норм» гидравлическое
                             </p>
                             <p class="grid-price">9 900 ₽</p>
-                            <a href="#" class="grid-btn">Купить</a>
+                            <a class="grid-btn" href="#">Купить</a>
                         </div>
                     </div>
                     <div class="grid-item grid-item-left">
                         <div class="bg-green">
-                            <div class="bg-green">
-                                <div class="bg-green-item">
-                                    <h3>Получайте бонусы и подарки</h3>
-                                    <p>
-                                        Каждый месяц разыгрываем<br />10 000
-                                        рублей для наших клиентов
-                                    </p>
-                                    <input
-                                        type="email"
-                                        placeholder="Введите e-mail"
-                                    />
-                                </div>
-                                <img
-                                    class="bg-green-img"
-                                    src="img/envelope.svg"
-                                    alt="Envelope"
+                            <div class="bg-green-item">
+                                <h3>Получайте бонусы и подарки</h3>
+                                <p>
+                                    Каждый месяц разыгрываем<br />10 000 рублей
+                                    для наших клиентов
+                                </p>
+                                <input
+                                    type="email"
+                                    placeholder="Введите e-mail"
                                 />
                             </div>
+                            <img
+                                class="bg-green-img"
+                                src="img/envelope.svg"
+                                alt="Envelope"
+                            />
                         </div>
                     </div>
                     <div class="grid-item grid-item-right">
